@@ -6,19 +6,17 @@ import org.example.tackit.domain.Free_board.Free_post.repository.FreePostJPARepo
 import org.example.tackit.domain.Free_board.Free_post.repository.FreeScrapJPARepository;
 import org.example.tackit.domain.Free_board.Free_tag.repository.FreePostTagMapRepository;
 import org.example.tackit.domain.admin.repository.MemberRepository;
-import org.example.tackit.domain.entity.FreePost;
-import org.example.tackit.domain.entity.FreeScrap;
-import org.example.tackit.domain.entity.Member;
-import org.example.tackit.domain.entity.Status;
+import org.example.tackit.domain.entity.*;
 import org.example.tackit.domain.mypage.dto.response.FreeMyCommentResponseDto;
 import org.example.tackit.domain.mypage.dto.response.FreeMyPostResponseDto;
 import org.example.tackit.domain.mypage.dto.response.FreeScrapResponse;
-import org.example.tackit.domain.mypage.dto.response.QnAMyCommentResponseDto;
+import org.example.tackit.global.dto.PageResponseDTO;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,12 +27,24 @@ public class MyPageFreeService {
     private final FreePostTagMapRepository freePostTagMapRepository;
     private final FreeCommentRepository freeCommentRepository;
 
-    public List<FreeScrapResponse> getScrapListByMember(Member member) {
-        List<FreeScrap> scraps = freeScrapJPARepository.findByMember(member);
+    // 스크랩한 free 게시글 조회
+    @Transactional
+    public PageResponseDTO<FreeScrapResponse> getScrapListByMember(String email, Pageable pageable) {
+        Member member = memberRepository.findByEmail(email)
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 사용자입니다."));
 
-        return scraps.stream()
-                .map(FreeScrapResponse::from)
-                .collect(Collectors.toList());
+        Page<FreeScrap> page = freeScrapJPARepository.findByMemberAndType(member, Post.Free, pageable);
+
+
+        return PageResponseDTO.from(page, scrap -> {
+            FreePost post = scrap.getFreePost();
+
+            List<String> tags = freePostTagMapRepository.findByFreePost(post).stream()
+                    .map(mapping -> mapping.getTag().getTagName())
+                    .toList();
+
+            return FreeScrapResponse.from(scrap, tags);
+        });
     }
 
     // 내가 쓴 자유 게시글 조회
